<resources>
    <string name="app_name">Taskify</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="uri_fileprovider_authority">com.taskify.fileprovider</string>
    <string name="facebook_content_provider_authority">com.facebook.app.FacebookContentProvider260152822115027</string>

    <string name="facebook_app_id">260152822115027</string>
    <string name="fb_login_protocol_scheme">fb260152822115027</string>

    <string name="menu_points_title">Points</string>
    <string name="bottom_navigation_bar_tasks">Tasks</string>
    <string name="bottom_navigation_bar_rewards">Rewards</string>
    <string name="bottom_navigation_bar_profile">Profile</string>

    <string name="login_screen_dividing_line_text">OR</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="log_in_button">Log In</string>
    <string name="username_hint_text">Username</string>
    <string name="last_name_hint_text">Last name</string>
    <string name="first_name_hint_text">First name</string>
    <string name="password_hint_text">Password</string>
    <string name="child_sign_up_missing_parent_username">You must enter your parent\'s username.</string>
    <string name="child_sign_up_user_not_parent">User %s is not a parent.</string>
    <string name="child_sign_up_user_not_exist">User %s does not exist.</string>
    <string name="sign_up_user_is_parent_text">Parent</string>
    <string name="sign_up_user_is_child_text">Child</string>
    <string name="sign_up_user_is_solo_text">Solo User</string>
    <string name="sign_up_parent_username_text">Parent\'s username:</string>
    <string name="complete_your_signup_label">Complete your signup!</string>
    <string name="log_in_with_facebook_button">Log in with Facebook</string>
    <string name="sign_up_with_facebook_button">Sign up with Facebook</string>

    <string name="task_name_hint_text">Task Name</string>
    <string name="points_value_hint_text">0</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="schedule_alarm_text">Schedule Alarm</string>
    <string name="recurring_alarm_text">Recurring Alarm</string>
    <string name="weekday_tuesday_label_short">Tue</string>
    <string name="weekday_monday_label_short">Mon</string>
    <string name="weekday_wednesday_label_short">Wed</string>
    <string name="weekday_thursday_label_short">Thu</string>
    <string name="weekday_friday_label_short">Fri</string>
    <string name="weekday_saturday_label_short">Sat</string>
    <string name="weekday_sunday_label_short">Sun</string>
    <string name="menu_create_title">Create</string>
    <string name="loading_text">Loading…</string>
    <string name="reward_name_hint_text">Reward Name</string>
    <string name="change_password_button_text">Change Password</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="profile_children_header">Children:</string>
    <string name="profile_parent_header">Parent:</string>
    <string name="link_facebook_button_text">Link with Facebook</string>
    <string name="link_facebook_existing_user_button_text">Link with existing user</string>
    <string name="points_value_suffix_text">Point(s)</string>
    <string name="assign_to_text">Assign to:</string>
    <string name="assigned_to_text">Assigned to:</string>
    <string name="earned_text">Earned:</string>
    <string name="not_earned_text">Not earned:</string>

    <string name="error_default_message">Error! Something went wrong.</string>
    <string name="error_remove_reward_message">Error while removing reward.</string>
    <string name="success_remove_reward_message">Reward removed.</string>
    <string name="error_remove_task_message">Error while marking task complete.</string>
    <string name="success_remove_task_message">Task complete! You earned %d %s!</string>
    <string name="error_save_user_points">Error while saving user points.</string>
    <string name="success_save_profile_image">Profile image saved successfully.</string>
    <string name="error_save_profile_image">Profile image save failed.</string>
    <string name="error_take_camera_picture">Picture wasn\'t taken!</string>
    <string name="success_save_reward_message">Reward saved successfully!</string>
    <string name="error_save_reward_message">Error while saving reward.</string>
    <string name="error_empty_reward_name_message">Reward name cannot be empty."</string>
    <string name="error_empty_points_message">Points cannot be empty.</string>
    <string name="error_negative_points_message">Points cannot be negative.</string>
    <string name="error_empty_task_name_message">Task name cannot be empty.</string>
    <string name="error_empty_child_message">You must select a child.</string>
    <string name="success_save_task_message">Task saved successfully!</string>
    <string name="error_save_task_message">Error while saving text.</string>
    <string name="success_parent_remove_task_message">Deleted task.</string>
    <string name="success_link_facebook_message">Successfully linked with Facebook!</string>
    <string name="error_link_facebook_message">Error linking with facebook.</string>
    <string name="error_empty_first_name_text">You must enter a first name.</string>
    <string name="error_empty_last_name_text">You must enter a last name.</string>
    <string name="error_empty_username_message">Username cannot be empty</string>
    <string name="error_empty_password_message">Password cannot be empty</string>
    <string name="error_save_theme">Error saving theme.</string>
    <string name="error_sign_up_no_user_type">You must choose a user type.</string>

    <string name="reward_details_progress_complete">Congratulations! You earned this reward.</string>
    <string name="reward_details_progress_1_point">1 point to go!</string>
    <string name="reward_details_progress_plural_points">%d points to go!</string>
    <string name="reward_splash_earned_reward_format">Congratulations!\nYou earned \"%s\"!</string>
    <string name="reward_splash_confirmation_button_0">Stellar!</string>
    <string name="reward_splash_confirmation_button_1">Awesome!</string>
    <string name="reward_splash_confirmation_button_2">Radical!</string>
    <string name="reward_splash_confirmation_button_3">Amazing!</string>
    <string name="reward_splash_confirmation_button_4">Cool!</string>

    <string name="content_description_taskify_logo">Taskify logo</string>
    <string name="content_description_profile_photo">Profile photo</string>
    <string name="content_description_add_profile_photo">Add a profile photo</string>
    <string name="content_description_reward_photo">Reward photo</string>
    <string name="content_description_add_reward_photo">Add a reward photo</string>
    <string name="content_description_launch_create_reward">Launch reward creation screen</string>
    <string name="content_description_launch_task_reward">Launch task creation screen</string>
    <string name="content_description_alarm_clock_icon">Alarm clock icon</string>
    <string name="content_description_edit_button">edit button</string>
    <string name="content_description_change_color_theme_purple_yellow_button">Change theme colors to purple and yellow</string>
    <string name="content_description_change_color_theme_blue_cyan_button">Change theme colors to blue and cyan</string>
    <string name="content_description_change_color_theme_maroon_peach_button">Change theme colors to maroon and peach</string>
    <string name="content_description_change_color_theme_pink_orange_button">Change theme colors to pink and orange</string>
    <string name="content_description_change_color_theme_brown_green_button">Change theme colors to brown and green</string>

    <string name="display_full_name_format">%s %s</string>
    <string name="display_username_format">\@%s</string>
    <string name="display_full_username_format">%s %s \@%s</string>
</resources>