<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TaskCreateActivity"
    android:layout_margin="10dp">

    <EditText
        android:id="@+id/editTextTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/task_name_hint_text"
        android:inputType="textMultiLine"
        android:maxLines="1" />

    <View
        android:id="@+id/placeholderView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/editTextTaskName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:id="@+id/layoutPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/placeholderView">

        <EditText
            android:id="@+id/editTextPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:ems="10"
            android:hint="@string/points_value_hint_text"
            android:inputType="number"
            android:maxLines="1" />

        <TextView
            android:id="@+id/textViewPointsSuffix"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/points_value_suffix_text"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutPoints"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:text="@string/cancel_button_text" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutPoints"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:text="@string/confirm_button_text" />

</RelativeLayout>