<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdditionalSignupActivity"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewCompleteSignupText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewLogo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/complete_your_signup_label"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_description_taskify_logo"
        app:srcCompat="@drawable/ic_taskify_logo_transparent" />

    <LinearLayout
        android:id="@+id/layoutFullName"
        android:layout_below="@+id/textViewCompleteSignupText"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:gravity="start|top"
            android:hint="@string/first_name_hint_text"
            android:autofillHints=".AUTOFILL_HINT_PERSON_NAME_GIVEN"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:gravity="start|top"
            android:hint="@string/last_name_hint_text"
            android:autofillHints=".AUTOFILL_HINT_PERSON_NAME_FAMILY"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionNext" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutFullName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/username_hint_text"
        android:autofillHints=".AUTOFILL_HINT_NEW_USERNAME"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionNext" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUsername"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/password_hint_text"
        android:autofillHints=".AUTOFILL_HINT_NEW_PASSWORD"
        android:inputType="textPassword"
        android:maxLines="1"
        android:imeOptions="actionDone" />
    <TextView
        android:id="@+id/textViewIsParentLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="I am a:"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="10dp"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/layoutIsParentChecks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/textViewIsParentLabel">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/checkBoxIsSolo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up_user_is_solo_text"
                android:checked="true"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBoxIsParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up_user_is_parent_text"
                android:checked="false"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBoxIsChild"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up_user_is_child_text"
                android:checked="false"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutChildEnterParentUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">
            <TextView
                android:id="@+id/textViewChildEnterParentUsernamePrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_parent_username_text"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/editTextChildEnterParentUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextChildEnterParentUsername"
                android:autofillHints=".AUTOFILL_HINT_NOT_APPLICABLE"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionDone" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutIsParentChecks"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sign_up_button" />

</RelativeLayout>