<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <ImageView
        android:id="@+id/imageViewProfilePhoto"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/content_description_profile_photo"
        android:src="@drawable/ic_baseline_person_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewProfilePhoto"
        android:layout_alignEnd="@+id/imageViewProfilePhoto"
        android:layout_marginTop="-40dp"
        android:layout_marginEnd="-10dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_add_a_photo_24"
        android:contentDescription="@string/content_description_add_profile_photo"
        app:fabCustomSize="40dp" />

    <LinearLayout
        android:id="@+id/layoutFullName"
        android:layout_below="@id/imageViewProfilePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:hint="@string/first_name_hint_text"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:hint="@string/last_name_hint_text"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutFullName"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        tools:text="\@username" />

    <RelativeLayout
        android:id="@+id/layoutAssociatedUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewUsername"
        android:layout_above="@id/buttonFacebookLink"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textViewAssociatedUserHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            tools:text="@string/profile_children_header"/>

        <!-- View of parent for child -->
        <include
            android:id="@+id/layoutChildDisplayParent"
            layout="@layout/item_user"
            android:layout_below="@id/textViewAssociatedUserHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <!-- RecyclerView of children for parent -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewParentDisplayChild"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/textViewAssociatedUserHeader"
            android:layout_marginTop="5dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/buttonSignout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_out_button" />

    <Button
        android:id="@+id/buttonFacebookLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonSignout"
        android:layout_marginBottom="5dp"
        android:text="@string/link_facebook_button_text"/>

</RelativeLayout>