<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".design.SplashDialogFragment"
    android:padding="10dp">

    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/buttonDismiss"
        android:elevation="-1dp"/>

    <ImageView
        android:id="@+id/imageViewRewardPhoto"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_baseline_star_24"
        android:contentDescription="@string/content_description_reward_photo"/>

    <TextView
        android:id="@+id/textViewEarnedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/imageViewRewardPhoto"
        android:textSize="22sp"
        tools:text="@string/reward_splash_earned_reward_format" />

    <Button
        android:id="@+id/buttonDismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewEarnedText"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imageViewRewardPhoto"
        tools:text="@string/reward_splash_confirmation_button_1" />


</RelativeLayout>